--- a/objectbox-code-modifier/build.gradle
+++ b/objectbox-code-modifier/build.gradle
@@ -18,8 +18,8 @@ dependencies {
     // Synchronize dependency versions with project version
     def baseVersion = "${project.version}"
     baseVersion = "0.9.8"
-    compile "io.objectbox:objectbox-java-api:$baseVersion"
-    compile project (':objectbox-generator')
+    shadow "io.objectbox:objectbox-java-api:$baseVersion"
+    shadow project (':objectbox-generator')
 
     // use JDT Core packaged by the Eclipse Scout project, has the latest versions
     // as a custom version resolution resolution strategy seems to not work on projects using the plugin
