--- a/objectbox-generator/build.gradle
+++ b/objectbox-generator/build.gradle
@@ -61,38 +61,10 @@ artifacts {
 uploadArchives {
     repositories {
         mavenDeployer {
-            if (project.hasProperty('preferedRepo') && preferedRepo == 'local') {
-                repository url: repositories.mavenLocal().url
-            } else if (project.hasProperty('preferedRepo') && project.hasProperty('preferedUsername')
-                    && project.hasProperty('preferedPassword')) {
-                configuration = configurations.deployerJars
-                repository(url: preferedRepo) {
-                    authentication(userName: preferedUsername, password: preferedPassword)
-                }
-            } else if (project.hasProperty('sonatypeUsername') && project.hasProperty('sonatypePassword')) {
-                beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-                def isSnapshot = version.endsWith('-SNAPSHOT')
-                def sonatypeRepositoryUrl = isSnapshot ?
-                        "https://oss.sonatype.org/content/repositories/snapshots/"
-                        : "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
-                repository(url: sonatypeRepositoryUrl) {
-                    authentication(userName: sonatypeUsername, password: sonatypePassword)
-                }
-            } else {
-                println "Settings sonatypeUsername/sonatypePassword missing/incomplete for ${project.name}"
-            }
-
+            // Basic definitions are defined in root project
             pom.project {
-                packaging 'jar'
                 name 'ObjectBox Generator'
                 description 'Code generator for ObjectBox, the superfast NoSQL database for Objects'
-                url 'http://greenrobot.org/greendao'
-
-                scm {
-                    url 'https://github.com/greenrobot/greenDAO'
-                    connection 'scm:git@github.com:greenrobot/greenDAO.git'
-                    developerConnection 'scm:git@github.com:greenrobot/greenDAO.git'
-                }
 
                 licenses {
                     license {
@@ -100,23 +72,6 @@ uploadArchives {
                         url 'http://www.gnu.org/licenses/gpl.txt'
                         distribution 'repo'
                     }
-                }
-
-                developers {
-                    developer {
-                        id 'greenrobot'
-                        name 'greenrobot'
-                    }
-                }
-
-                issueManagement {
-                    system 'GitHub Issues'
-                    url 'https://github.com/greenrobot/greenDAO/issues'
-                }
-
-                organization {
-                    name 'greenrobot'
-                    url 'http://greenrobot.org'
                 }
             }
         }
