--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 include ':objectbox-generator'
 include ':objectbox-code-modifier'
 include ':objectbox-gradle-plugin'
+include ':objectbox-processor'
 include 'greenrobot-jdt'
