First steps towards IdSync integration.
- Load example model JSON. Get entity from ID model via Uid or name.
- Set schema and entity properties based on ID model.
- Not using correct path, not updating or verifying model. Not touching
  properties.

--- a/objectbox-processor/build.gradle
+++ b/objectbox-processor/build.gradle
@@ -10,6 +10,7 @@ repositories {
 
 dependencies {
     compile "io.objectbox:objectbox-java-api:${project.version}"
+    compile project (':objectbox-code-modifier')
     compile project (':objectbox-generator')
     // auto-service generates service configuration
     compileOnly 'com.google.auto.service:auto-service:1.0-rc2'
