--- a/objectbox-processor/build.gradle
+++ b/objectbox-processor/build.gradle
@@ -19,5 +19,6 @@ dependencies {
     compileOnly 'com.google.auto.service:auto-service:1.0-rc2'
 
     testCompile 'junit:junit:4.12'
+    testCompile 'com.google.truth:truth:0.32'
     testCompile 'com.google.testing.compile:compile-testing:0.11'
 }
