--- a/objectbox-processor/build.gradle
+++ b/objectbox-processor/build.gradle
@@ -21,4 +21,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'com.google.truth:truth:0.32'
     testCompile 'com.google.testing.compile:compile-testing:0.11'
+    // generated files during test need objectbox dependencies to compile
+    testCompile 'io.objectbox:objectbox-android:0.9.12'
 }
