Assert generated source trees.
- Have to manually add tools.jar required by compile-testing: https://github.com/google/compile-testing/issues/28#issuecomment-69204681

--- a/objectbox-processor/build.gradle
+++ b/objectbox-processor/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     // auto-service generates service configuration
     compileOnly 'com.google.auto.service:auto-service:1.0-rc2'
 
+    // manually add tools.jar required by compile-testing
+    testCompile files(org.gradle.internal.jvm.Jvm.current().getToolsJar())
     testCompile 'junit:junit:4.12'
     testCompile 'com.google.truth:truth:0.32'
     testCompile 'com.google.testing.compile:compile-testing:0.11'
