Add daoCompat and daoPackage flag, though unusable (requires get/set).
- Set schema name to "default".
- If daoCompat is true, set custom package name.
- Set additional properties on schema entity, add note to add remaining.

--- a/objectbox-processor/build.gradle
+++ b/objectbox-processor/build.gradle
@@ -24,5 +24,6 @@ dependencies {
     testCompile 'com.google.truth:truth:0.32'
     testCompile 'com.google.testing.compile:compile-testing:0.11'
     // generated files during test need objectbox dependencies to compile
-    testCompile 'io.objectbox:objectbox-android:0.9.12'
+    testCompile 'io.objectbox:objectbox-java:0.9.12'
+    testCompile 'io.objectbox:objectbox-daocompat:0.9.12'
 }
