--- a/objectbox-processor/build.gradle
+++ b/objectbox-processor/build.gradle
@@ -11,7 +11,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     compile "io.objectbox:objectbox-java-api:0.9.12"
-    compile 'io.objectbox:objectbox-java:0.9.12'
+    compile 'io.objectbox:objectbox-java:0.9.13-SNAPSHOT'
     // auto-service generates service configuration
     compileOnly 'com.google.auto.service:auto-service:1.0-rc2'
 
