--- a/objectbox-gradle-plugin/test-gradle-projects/java/build.gradle
+++ b/objectbox-gradle-plugin/test-gradle-projects/java/build.gradle
@@ -1,6 +1,7 @@
 // Plugins must be in (test) classpath of objectbox-gradle-plugin
 plugins {
-    id 'io.objectbox.legacy'
+    id "net.ltgt.apt" version "0.12"
+    id 'io.objectbox'
     id 'java'
 }
 
@@ -8,20 +9,11 @@ targetCompatibility = '1.7'
 sourceCompatibility = '1.7'
 
 objectbox {
-    schemaVersion 1000
-}
-
-// io.objectbox plugin with apt does not work (cannot find Customer_)
-configurations {
-    apt
-}
-
-compileJava {
-    options.annotationProcessorPath = configurations.apt
+    debug true
 }
 
 dependencies {
-    compile 'io.objectbox:objectbox-java:0.9.16-RC'
+    compile 'io.objectbox:objectbox-java:1.0.1'
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.7.22'
 }
