test-gradle-projects: enable processor debug output.

--- a/objectbox-gradle-plugin/test-gradle-projects/java/build.gradle
+++ b/objectbox-gradle-plugin/test-gradle-projects/java/build.gradle
@@ -8,8 +8,13 @@ plugins {
 targetCompatibility = '1.7'
 sourceCompatibility = '1.7'
 
+// enable ObjectBox plugin and processor debug output
 objectbox {
     debug true
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += [ "-Aobjectbox.debug=true" ]
 }
 
 dependencies {
