--- a/objectbox-gradle-plugin/test-gradle-projects/kotlin-android/build.gradle
+++ b/objectbox-gradle-plugin/test-gradle-projects/kotlin-android/build.gradle
@@ -11,10 +11,16 @@ sourceCompatibility = '1.7'
 
 uploadArchives.enabled = false
 
+// enable ObjectBox plugin and processor debug output
 objectbox {
+    debug true
 }
 
-android.sourceSets.main.java.srcDirs += 'build/generated/source/objectbox'
+kapt {
+    arguments {
+        arg("objectbox.debug", true)
+    }
+}
 
 android {
     compileSdkVersion 25
@@ -30,8 +36,6 @@ android {
 }
 
 dependencies {
-    compile 'io.objectbox:objectbox-android:0.9.16-RC'
-    //compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.7.22'
 }
