test-gradle-projects: clean up build files, processor debug for java-android.

--- a/objectbox-gradle-plugin/test-gradle-projects/java-android/build.gradle
+++ b/objectbox-gradle-plugin/test-gradle-projects/java-android/build.gradle
@@ -4,12 +4,7 @@ plugins {
     id 'io.objectbox'
 }
 
-targetCompatibility = '1.7'
-sourceCompatibility = '1.7'
-
-uploadArchives.enabled = false
-
-// enable ObjectBox plugin and processor debug output
+// enable ObjectBox plugin debug output
 objectbox {
     debug true
 }
@@ -24,6 +19,13 @@ android {
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
+
+        // enable ObjectBox processor debug output
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [ 'objectbox.debug' : 'true' ]
+            }
+        }
     }
 }
 
