test-gradle-projects: generate build files for Android tests.
- To ensure the apply order of plugins, use the old apply syntax to
  apply plugins. But this requires usage of a buildscript block. As per
  Gradle docs it is supported to simply add the whole plugin classpath
  to the buildscript block.
- Previously objectbox plugin would print warning as Android plugin was
  not found.

--- a/objectbox-gradle-plugin/test-gradle-projects/java-android/build.gradle.template
+++ b/objectbox-gradle-plugin/test-gradle-projects/java-android/build.gradle.template
@@ -1,19 +1,11 @@
-// Plugins must be in (test) classpath of objectbox-gradle-plugin
-plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-    id 'io.objectbox'
-}
+// WARNING: this file is prepended with a buildscript blog by PluginIntegrationTest
 
-// enable ObjectBox plugin and processor debug output
+apply plugin: 'com.android.application'
+apply plugin: 'io.objectbox'
+
+// enable ObjectBox plugin debug output
 objectbox {
     debug true
-}
-
-kapt {
-    arguments {
-        arg("objectbox.debug", true)
-    }
 }
 
 android {
@@ -21,11 +13,18 @@ android {
     buildToolsVersion "25.0.3"
 
     defaultConfig {
-        applicationId "io.objectbox.testgradleproject.kotlinandroid"
+        applicationId "io.objectbox.testgradleproject.javaandroid"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
+
+        // enable ObjectBox processor debug output
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [ 'objectbox.debug' : 'true' ]
+            }
+        }
     }
 }
 
