--- a/objectbox-gradle-plugin/test-gradle-projects/kotlin-android/build.gradle.template
+++ b/objectbox-gradle-plugin/test-gradle-projects/kotlin-android/build.gradle.template
@@ -1,12 +1,18 @@
-// Plugins must be in (test) classpath of objectbox-gradle-plugin
-plugins {
-    id 'com.android.application'
-    id 'io.objectbox'
-}
+// WARNING: this file is prepended with a buildscript blog by PluginIntegrationTest
 
-// enable ObjectBox plugin debug output
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'io.objectbox'
+
+// enable ObjectBox plugin and processor debug output
 objectbox {
     debug true
+}
+
+kapt {
+    arguments {
+        arg("objectbox.debug", true)
+    }
 }
 
 android {
@@ -14,18 +20,11 @@ android {
     buildToolsVersion "25.0.3"
 
     defaultConfig {
-        applicationId "io.objectbox.testgradleproject.javaandroid"
+        applicationId "io.objectbox.testgradleproject.kotlinandroid"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
-
-        // enable ObjectBox processor debug output
-        javaCompileOptions {
-            annotationProcessorOptions {
-                arguments = [ 'objectbox.debug' : 'true' ]
-            }
-        }
     }
 }
 
