Publish sources jar for all modules.
- https://example.org/trac/flat-store/ticket/118
- Full sources for generator, README with explanation for all others.

--- a/objectbox-generator/build.gradle
+++ b/objectbox-generator/build.gradle
@@ -55,7 +55,7 @@ task sourcesJar(type: Jar) {
 artifacts {
     archives jar
     archives javadocJar
-    // Not yet: archives sourcesJar
+    archives sourcesJar
 }
 
 uploadArchives {
