--- a/objectbox-code-modifier/build.gradle
+++ b/objectbox-code-modifier/build.gradle
@@ -41,7 +41,7 @@ task sourcesJar(type: Jar) {
 artifacts {
     archives jar
     archives javadocJar
-    // Not yet archives sourcesJar
+    archives sourcesJar
 }
 
 uploadArchives {
