--- a/objectbox-gradle-plugin/build.gradle
+++ b/objectbox-gradle-plugin/build.gradle
@@ -54,7 +54,7 @@ task sourcesJar(type: Jar) {
 artifacts {
     archives jar
     archives javadocJar
-    // Not yet: archives sourcesJar
+    archives sourcesJar
 }
 
 uploadArchives {
