--- a/objectbox-code-modifier/build.gradle
+++ b/objectbox-code-modifier/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'kotlin'
-apply plugin: 'maven'
 apply plugin: 'de.fuerstenau.buildconfig'
 apply plugin: 'idea' // to pick up generated BuildConfig in IntelliJ
 
@@ -27,6 +26,8 @@ buildConfig {
     // rename to avoid conflict with other build config files (modules use same root package)
     clsName = 'CodeModifierBuildConfig'
 }
+
+apply from: rootProject.file("gradle/objectbox-publish.gradle")
 
 task javadocJar(type: Jar) {
     classifier = 'javadoc'
