--- a/objectbox-gradle-plugin/build.gradle
+++ b/objectbox-gradle-plugin/build.gradle
@@ -1,7 +1,6 @@
 // https://docs.gradle.org/current/userguide/custom_plugins.html
 apply plugin: 'kotlin'
 apply plugin: 'groovy' // for dsl tests
-apply plugin: 'maven'
 apply plugin: 'de.fuerstenau.buildconfig'
 apply plugin: 'idea' // to pick up generated BuildConfig in IntelliJ
 
@@ -40,6 +39,8 @@ buildConfig {
     // also add runtime version to BuildConfig
     buildConfigField 'String', 'VERSION_RUNTIME', {"$objectbox_runtime_version"}
 }
+
+apply from: rootProject.file("gradle/objectbox-publish.gradle")
 
 task javadocJar(type: Jar) {
     classifier = 'javadoc'
