Update some dependencies.
- auto-service [1.0-rc2 -> 1.0-rc4]
- freemarker [2.3.26-incubating -> 2.3.28]
- javassist [3.21.0-GA -> 3.24.0-GA]
  Java 11 support
- mockito [2.19.1 -> 2.23.0]
  Java 11, Kotlin coroutines support
- hamkrest [1.4.0.0 -> 1.6.0.0]
- truth [0.37 -> 0.42]

--- a/objectbox-code-modifier/build.gradle
+++ b/objectbox-code-modifier/build.gradle
@@ -18,8 +18,8 @@ dependencies {
     compile project (':objectbox-generator')
 
     testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:2.19.1'
-    testCompile 'com.natpryce:hamkrest:1.4.0.0'
+    testCompile "org.mockito:mockito-core:$mockito_version"
+    testCompile 'com.natpryce:hamkrest:1.6.0.0'
 }
 
 buildConfig {
