--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ buildscript {
     ext {
         android_version = '3.0.0' // minimal supported version
         kotlin_version = '1.3.10'
+        mockito_version = '2.23.0'
+        
         objectbox_version = '2.3.0-SNAPSHOT' // used to version this projects' artifacts
         objectbox_plugin_version = objectbox_version // used to version this projects' artifacts
         objectbox_java_version = objectbox_version // used for plugin dependencies
