--- a/objectbox-generator/build.gradle
+++ b/objectbox-generator/build.gradle
@@ -10,7 +10,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
-    compile 'org.freemarker:freemarker:2.3.26-incubating'
+    compile 'org.freemarker:freemarker:2.3.28'
     compile 'org.greenrobot:essentials:3.0.0-RC1'
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
