--- a/objectbox-gradle-plugin/build.gradle
+++ b/objectbox-gradle-plugin/build.gradle
@@ -18,7 +18,7 @@ dependencies {
     compile project(':objectbox-code-modifier')
     compileOnly "com.android.tools.build:gradle:$android_version"
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile 'org.javassist:javassist:3.21.0-GA'
+    compile 'org.javassist:javassist:3.24.0-GA'
 
     // For Transformer to resolve class dependencies to (real) ObjectBox classes
     compile "io.objectbox:objectbox-java:$objectbox_java_version"
@@ -29,7 +29,7 @@ dependencies {
     testCompile "com.android.tools.build:gradle:$android_version"
 
     testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:2.19.1'
+    testCompile "org.mockito:mockito-core:$mockito_version"
     testCompile gradleTestKit()
 }
 
