Produce Java 8 bytecode for all artifacts, use `kotlin-stdlib-jdk8`.

--- a/objectbox-code-modifier/build.gradle
+++ b/objectbox-code-modifier/build.gradle
@@ -5,11 +5,11 @@ apply plugin: 'idea' // to pick up generated BuildConfig in IntelliJ
 group = 'io.objectbox'
 archivesBaseName = 'objectbox-code-modifier'
 
-sourceCompatibility = '1.7'
-targetCompatibility = '1.7'
+sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     compile 'org.greenrobot:essentials:3.0.0-RC1'
     compile 'com.squareup.moshi:moshi:1.8.0'
