--- a/objectbox-processor/build.gradle
+++ b/objectbox-processor/build.gradle
@@ -2,13 +2,14 @@ apply plugin: 'kotlin'
 
 group = 'io.objectbox'
 
-sourceCompatibility = 1.7
+sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
 
 dependencies {
     compile project (':objectbox-code-modifier')
     compile project (':objectbox-generator')
     
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     compile "io.objectbox:objectbox-java-api:$objectbox_java_version"
     compile "io.objectbox:objectbox-java:$objectbox_java_version"
